# RecruitmentTask

./: LICENSE  buildAndRunTest.sh
src/: CMakeLists.txt  fileReader.cpp  fileReader.hpp  main.cpp  sharedMultiSet.cpp  sharedMultiSet.hpp  sharedStack.cpp  sharedStack.hpp
tests/: CMakeLists.txt
